<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#AAff9999">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="30"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <ImageView

                        android:id="@+id/imageViewId"
                        android:layout_width="35dp"
                        android:layout_height="50dp"
                        />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="70"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="10dp"
                    android:layout_marginBottom="30dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:gravity="center_horizontal|center_vertical"
                        android:layout_weight="50">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/nom" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="50"
                        android:gravity="center_horizontal|center_vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="Prnnom " />
                    </TableRow>
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"

                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="100"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:layout_margin="20dp"
                    >
                    <EditText

                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/id_TittleOffre"
                        android:hint="@string/offre_title"
                        android:background="@android:color/transparent"
                        />

                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"

                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="7dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:gravity="left|top"
                        android:hint="offre details"
                        android:inputType="textMultiLine"
                        android:lines="3"
                        android:maxLines="10"
                        android:minLines="3"
                        android:padding="10dp"
                        android:scrollbars="vertical" />
                    />

                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="100"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:layout_margin="7dp"
                    >

                    <Button

                        android:id="@+id/id_Domain"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/select_domoain"
                        android:theme="@style/FlatButton"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:background="@color/myWeight"
                        android:textColor="@color/myDark"

                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/id_TextDomaine"
                        android:textColor="@color/colorPrimary"
                        />

                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="100"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:layout_margin="7dp"
                    >

                    <Button

                        android:id="@+id/id_Type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/select_type"
                        android:theme="@style/FlatButton"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:background="@color/myWeight"
                        android:textColor="@color/myDark"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/id_TextType"
                        android:textColor="@color/colorPrimary"
                        />

                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"

                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="100"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:layout_margin="7dp"
                    >

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/id_Requiremments"
                        android:text="@string/requiremments"
                        android:theme="@style/FlatButton"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:background="@color/myWeight"
                        android:textColor="@color/myDark"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/id_TextRequiremments"
                        android:textColor="@color/colorPrimary"
                        />

                </LinearLayout>

            </TableRow>

            <TableRow

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="100"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:layout_margin="7dp"
                    >

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/id_Skills"
                        android:text="@string/skills_and_experiences"
                        android:theme="@style/FlatButton"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:background="@color/myWeight"
                        android:textColor="@color/myDark"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/id_TextSkills"
                        android:textColor="@color/colorPrimary"
                        />

                </LinearLayout>

            </TableRow>

            <TableRow

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="100"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:layout_margin="20dp"
                    >

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/postule_Btn"
                        android:text="@string/postuler"
                        android:theme="@style/FlatButton"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:background="@color/myWeight"
                        android:textColor="@color/colorPrimary"
                        />


                </LinearLayout>

            </TableRow>

        </TableLayout>




    </RelativeLayout>
</ScrollView>